--- a/src/vue/VueHomepage.fxml
+++ b/src/vue/VueHomepage.fxml
@@ -198,15 +198,24 @@
                      </content>
                   </ScrollPane>
                </children></VBox>
-            <ScrollPane id="grades-view" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefViewportHeight="1010.0" prefViewportWidth="1512.0">
-               <content>
-                  <VBox id="grades-view" fx:id="listePrincipal" spacing="16.0" HBox.hgrow="ALWAYS">
-                     <children>
-                        <VBox spacing="16.0" />
-                     </children>
+            <VBox>
+               <children>
+                  <VBox fx:id="zoneTitre">
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
                   </VBox>
-               </content>
-            </ScrollPane>
+                  <ScrollPane id="grades-view" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefViewportHeight="1010.0" prefViewportWidth="1512.0">
+                     <content>
+                        <VBox id="grades-view" fx:id="listePrincipale" spacing="16.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <VBox spacing="16.0" />
+                           </children>
+                        </VBox>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
          </children>
          <padding>
             <Insets bottom="16.0" left="16.0" right="16.0" />
