--- a/src/vue/vueExporter.fxml
+++ b/src/vue/vueExporter.fxml
@@ -31,15 +31,15 @@
                   </Text>
                </children>
                <padding>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
+                  <Insets bottom="16.0" left="16.0" right="10.0" top="16.0" />
                </padding>
             </VBox>
             <VBox alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="328.0">
                <padding>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
+                  <Insets bottom="10.0" right="10.0" top="10.0" />
                </padding>
                <children>
-                  <TextField fx:id="adresseIpInput" prefHeight="31.0" prefWidth="239.0">
+                  <TextField fx:id="adresseIpInput" alignment="CENTER" prefHeight="31.0" prefWidth="170.0">
                      <font>
                         <Font name="Verdana Bold" size="16.0" />
                      </font>
@@ -68,13 +68,13 @@
                   <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
                </padding>
             </VBox>
-            <HBox alignment="CENTER" prefHeight="52.0" prefWidth="500.0">
+            <HBox alignment="CENTER_RIGHT" prefHeight="52.0" prefWidth="500.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#programmeNationnalPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="32.0" prefWidth="225.0" styleClass="secondary-button" text="Programme nationnal">
+                  <Button fx:id="programmeNational" mnemonicParsing="false" onAction="#boutonSelectionPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="40.0" styleClass="secondary-button" text="Programme national">
                      <graphic>
                         <ImageView fx:id="logoProgramme" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../vue/ressources/icone_plus_violet.png" />
+                              <Image url="@../vue/ressources/icone_plus.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -85,11 +85,11 @@
                         <Insets right="16.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#modalitesEvaluationPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="32.0" prefWidth="225.0" styleClass="secondary-button" text="Modalités d'évaluation">
+                  <Button fx:id="modalitesEvaluation" mnemonicParsing="false" onAction="#boutonSelectionPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="40.0" styleClass="secondary-button" text="Modalités d'évaluation">
                      <graphic>
                         <ImageView fx:id="logoModalites" fitHeight="24.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../vue/ressources/icone_plus_violet.png" />
+                              <Image url="@../vue/ressources/icone_plus.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -112,7 +112,7 @@
       </HBox>
       <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#annulerPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" styleClass="secondary-button" text="ANNULER">
+            <Button mnemonicParsing="false" onAction="#annulerPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="40.0" styleClass="secondary-button" text="ANNULER">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
@@ -127,7 +127,7 @@
                   <Insets right="16.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" onAction="#etablirUneConnexionPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="32.0" prefWidth="245.0" styleClass="primary-button" text="ETABLIR UNE CONNEXION">
+            <Button mnemonicParsing="false" onAction="#etablirUneConnexionPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" styleClass="primary-button" text="TRANSMETTRE LES DONNEES">
                <graphic>
                   <ImageView fitHeight="24.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -138,6 +138,9 @@
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
+               <HBox.margin>
+                  <Insets right="5.0" />
+               </HBox.margin>
             </Button>
          </children>
       </HBox>
