--- a/src/vue/VueHomepage.fxml
+++ b/src/vue/VueHomepage.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -23,11 +24,14 @@
             </Text>
             <HBox alignment="TOP_RIGHT" HBox.hgrow="ALWAYS">
                <children>
-                  <Button fx:id="boutonUtilisateur" mnemonicParsing="false" onAction="#utilisateurPresser" onMouseEntered="#utilisateurEntree" onMouseExited="#utilisateurSortie" text="Utilisateur">
+                  <Button fx:id="boutonUtilisateur" mnemonicParsing="false" onAction="#utilisateurPresser" onMouseEntered="#userEntered" onMouseExited="#userExited" text="Utilisateur">
                      <styleClass>
                         <String fx:value="utilisateur" />
                         <String fx:value="utilisateur-not-hover" />
-                     </styleClass></Button>
+                     </styleClass>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                   <Line endX="38.0" rotate="90.0" stroke="WHITE" translateY="16.0" />
                   <HBox spacing="16.0">
                      <children>
@@ -46,6 +50,9 @@
                               <String fx:value="primary-button" />
                               <String fx:value="primary-button-not-hover" />
                            </styleClass>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
                         <Button mnemonicParsing="false" onAction="#exporterPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="EXPORTER" textFill="WHITE">
                            <font>
@@ -62,6 +69,9 @@
                               <String fx:value="primary-button" />
                               <String fx:value="primary-button-not-hover" />
                            </styleClass>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
                      </children>
                   </HBox>
@@ -75,12 +85,18 @@
                            <image>
                               <Image url="@../vue/ressources/icone_reinitialiser.png" />
                            </image>
+                           <cursor>
+                              <Cursor fx:constant="DEFAULT" />
+                           </cursor>
                         </ImageView>
                      </graphic>
                      <styleClass>
                         <String fx:value="secondary-button" />
                         <String fx:value="secondary-button-not-hover" />
                      </styleClass>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </HBox>
@@ -106,7 +122,10 @@
                      <styleClass>
                         <String fx:value="primary-button" />
                         <String fx:value="primary-button-not-hover" />
-                     </styleClass></Button>
+                     </styleClass>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                   <ScrollPane id="sideMenu" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
                      <content>
                         <VBox id="navigation" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="360.0" VBox.vgrow="ALWAYS">
