--- a/src/vue/VueImportation.fxml
+++ b/src/vue/VueImportation.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -19,11 +20,14 @@
             </Text>
             <HBox alignment="TOP_RIGHT" HBox.hgrow="ALWAYS">
                <children>
-                  <Button fx:id="boutonUtilisateur" mnemonicParsing="false" onAction="#utilisateurPresser" onMouseEntered="#utilisateurEntree" onMouseExited="#utilisateurSortie" text="Utilisateur">
+                  <Button fx:id="boutonUtilisateur" mnemonicParsing="false" onAction="#utilisateurPresser" onMouseEntered="#userEntered" onMouseExited="#userExited" text="Utilisateur">
                      <styleClass>
                         <String fx:value="utilisateur" />
                         <String fx:value="utilisateur-not-hover" />
-                     </styleClass></Button>
+                     </styleClass>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                </children>
             </HBox>
          </children>
@@ -43,6 +47,9 @@
                      </font>
                   </Text>
                </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
       </VBox>
