--- a/src/vue/VuePopUpExporter.fxml
+++ b/src/vue/VuePopUpExporter.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -10,9 +12,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="283.0" prefWidth="845.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VueExporterControleur">
+<VBox id="container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="283.0" prefWidth="845.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VuePopUpExporterControleur">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="EXPORTER DES DONNEES" wrappingWidth="253.8828125">
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="EXPORTER DES DONNEES" wrappingWidth="253.8828125">
          <font>
             <Font name="Verdana Bold" size="16.0" />
          </font>
@@ -31,7 +33,7 @@
                   </Text>
                </children>
                <padding>
-                  <Insets bottom="16.0" left="16.0" right="10.0" top="16.0" />
+                  <Insets bottom="16.0" left="16.0" right="8.0" top="16.0" />
                </padding>
             </VBox>
             <VBox alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="328.0">
@@ -43,6 +45,9 @@
                      <font>
                         <Font name="Verdana Bold" size="16.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor>
                   </TextField>
                </children>
             </VBox>
@@ -70,7 +75,7 @@
             </VBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="52.0" prefWidth="500.0">
                <children>
-                  <Button fx:id="programmeNational" mnemonicParsing="false" onAction="#boutonSelectionPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="40.0" styleClass="secondary-button" text="Programme national">
+                  <Button fx:id="programmeNational" mnemonicParsing="false" onAction="#boutonSelectionPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" text="Programme national">
                      <graphic>
                         <ImageView fx:id="logoProgramme" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -84,8 +89,15 @@
                      <HBox.margin>
                         <Insets right="16.0" />
                      </HBox.margin>
+                     <styleClass>
+                        <String fx:value="secondary-button" />
+                        <String fx:value="secondary-button-not-hover" />
+                     </styleClass>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Button fx:id="modalitesEvaluation" mnemonicParsing="false" onAction="#boutonSelectionPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="40.0" styleClass="secondary-button" text="Modalités d'évaluation">
+                  <Button fx:id="modalitesEvaluation" mnemonicParsing="false" onAction="#boutonSelectionPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" text="Modalités d'évaluation">
                      <graphic>
                         <ImageView fx:id="logoModalites" fitHeight="24.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -99,6 +111,13 @@
                      <HBox.margin>
                         <Insets right="16.0" />
                      </HBox.margin>
+                     <styleClass>
+                        <String fx:value="secondary-button" />
+                        <String fx:value="secondary-button-not-hover" />
+                     </styleClass>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </HBox>
@@ -112,7 +131,7 @@
       </HBox>
       <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#annulerPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="40.0" styleClass="secondary-button" text="ANNULER">
+            <Button mnemonicParsing="false" onAction="#annulerPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" text="ANNULER">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
@@ -126,8 +145,15 @@
                <HBox.margin>
                   <Insets right="16.0" />
                </HBox.margin>
+               <styleClass>
+                  <String fx:value="secondary-button" />
+                  <String fx:value="secondary-button-not-hover" />
+               </styleClass>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button mnemonicParsing="false" onAction="#etablirUneConnexionPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" styleClass="primary-button" text="TRANSMETTRE LES DONNEES">
+            <Button mnemonicParsing="false" onAction="#etablirUneConnexionPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" text="TRANSMETTRE LES DONNEES">
                <graphic>
                   <ImageView fitHeight="24.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -141,6 +167,13 @@
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin>
+               <styleClass>
+                  <String fx:value="primary-button" />
+                  <String fx:value="primary-button-not-hover" />
+               </styleClass>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
       </HBox>
