--- a/src/vue/VuePopUpImporter.fxml
+++ b/src/vue/VuePopUpImporter.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -45,6 +46,9 @@
                         <String fx:value="primary-button" />
                         <String fx:value="primary-button-not-hover" />
                      </styleClass>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </VBox>
@@ -81,6 +85,9 @@
                         <String fx:value="primary-button" />
                         <String fx:value="primary-button-not-hover" />
                      </styleClass>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </VBox>
@@ -98,6 +105,9 @@
                         <String fx:value="primary-button" />
                         <String fx:value="primary-button-not-hover" />
                      </styleClass>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </VBox>
@@ -126,6 +136,9 @@
                   <String fx:value="secondary-button" />
                   <String fx:value="secondary-button-not-hover" />
                </styleClass>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
       </HBox>
