--- a/src/vue/modules/ModuleEvaluation.fxml
+++ b/src/vue/modules/ModuleEvaluation.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
@@ -8,11 +9,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<HBox spacing="16.0" styleClass="grade-info-band" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<HBox prefWidth="5000.0" spacing="16.0" styleClass="grade-info-band" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox spacing="4.0" HBox.hgrow="ALWAYS">
          <children>
-            <HBox spacing="8.0" VBox.vgrow="ALWAYS">
+            <HBox maxWidth="1000.0" spacing="8.0" VBox.vgrow="NEVER">
                <children>
                   <HBox alignment="CENTER" prefWidth="50.0" styleClass="ponderation-label">
                      <children>
@@ -26,11 +27,11 @@
                         <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
                      </padding>
                   </HBox>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="Nom de l'évaluation">
+                  <Label maxWidth="1000.0" styleClass="label-noir" text="Label">
                      <font>
                         <Font name="Verdana Bold" size="24.0" />
                      </font>
-                  </Text>
+                  </Label>
                </children>
             </HBox>
             <HBox spacing="8.0">
@@ -65,6 +66,9 @@
                      <font>
                         <Font name="Verdana Bold" size="24.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor>
                   </TextField>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="/20">
                      <font>
