--- a/src/vue/modules/ModuleEvaluationEdition.fxml
+++ b/src/vue/modules/ModuleEvaluationEdition.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -26,7 +27,10 @@
                         </Text>
                      </children>
                   </HBox>
-                  <TextField style="-fx-padding: 0 0 0 8px;" HBox.hgrow="ALWAYS" />
+                  <TextField style="-fx-padding: 0 0 0 8px;" HBox.hgrow="ALWAYS">
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor></TextField>
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" spacing="8.0">
@@ -40,7 +44,10 @@
                         </Text>
                      </children>
                   </HBox>
-                  <TextField style="-fx-padding: 0 0 0 8px;" HBox.hgrow="ALWAYS" />
+                  <TextField style="-fx-padding: 0 0 0 8px;" HBox.hgrow="ALWAYS">
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor></TextField>
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" spacing="8.0">
@@ -54,7 +61,10 @@
                         </Text>
                      </children>
                   </HBox>
-                  <TextField style="-fx-padding: 0 0 0 8px;" HBox.hgrow="ALWAYS" />
+                  <TextField style="-fx-padding: 0 0 0 8px;" HBox.hgrow="ALWAYS">
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor></TextField>
                </children>
             </HBox>
          </children>
@@ -75,6 +85,9 @@
                         <String fx:value="primary-button" />
                         <String fx:value="primary-button-not-hover" />
                      </styleClass>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </HBox>
