--- a/src/vue/modules/ModuleEvaluationVide.fxml
+++ b/src/vue/modules/ModuleEvaluationVide.fxml
@@ -7,7 +7,7 @@
 
 <HBox alignment="CENTER" spacing="16.0" styleClass="grade-info-band" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="Aucune modalités n'a été renseigné, veuillez les renseigné ci-dessus ">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="Aucune modalité renseigné : cliquez sur &quot;Editer les modalités d'évaluations&quot;">
          <font>
             <Font name="Verdana Bold" size="24.0" />
          </font>
