--- a/src/vue/modules/ModuleRessourceEditionAjouter.fxml
+++ b/src/vue/modules/ModuleRessourceEditionAjouter.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -24,6 +25,9 @@
             <String fx:value="primary-button" />
             <String fx:value="primary-button-not-hover" />
          </styleClass>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
    </children>
 </HBox>
