--- a/src/vue/modules/ModuleSideMenuButton.fxml
+++ b/src/vue/modules/ModuleSideMenuButton.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 
 <Button mnemonicParsing="false" stylesheets="@../vue/style.css" text="R1.01 - Qualité de développement" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
@@ -11,5 +12,9 @@
    <styleClass>
       <String fx:value="side-nav-element-inactive" />
       <String fx:value="side-nav-element" />
+      <String fx:value="side-nav-element-inactive-not-hover" />
    </styleClass>
+   <cursor>
+      <Cursor fx:constant="HAND" />
+   </cursor>
 </Button>
