--- a/src/vue/modules/ModuleTitreRessource.fxml
+++ b/src/vue/modules/ModuleTitreRessource.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -12,13 +14,13 @@
    <children>
       <HBox alignment="CENTER_LEFT" spacing="16.0">
          <children>
-            <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
+            <HBox alignment="CENTER_LEFT" maxWidth="1000.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="R2.01 - Développement Orienté Objet">
+                  <Label maxWidth="1000.0" styleClass="label-blanc" text="Label">
                      <font>
                         <Font name="Verdana Bold" size="24.0" />
                      </font>
-                  </Text>
+                  </Label>
                </children>
             </HBox>
             <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="EDITER LES MODALITES" textFill="WHITE">
@@ -36,6 +38,9 @@
                   <String fx:value="primary-button" />
                   <String fx:value="primary-button-not-hover" />
                </styleClass>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
       </HBox>
