--- a/src/vue/modules/ModuleTitreRessourceEdition.fxml
+++ b/src/vue/modules/ModuleTitreRessourceEdition.fxml
@@ -2,22 +2,23 @@
 
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <HBox stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox alignment="CENTER_LEFT" spacing="16.0" HBox.hgrow="ALWAYS">
+      <HBox alignment="CENTER_LEFT" maxWidth="1250.0" spacing="16.0" HBox.hgrow="ALWAYS">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="U2.01 - Réaliser">
+            <Label maxWidth="1000.0" styleClass="label-blanc" text="Label">
                <font>
                   <Font name="Verdana Bold" size="24.0" />
                </font>
-            </Text>
+            </Label>
             <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="VALIDER" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
@@ -33,6 +34,9 @@
                   <String fx:value="primary-button" />
                   <String fx:value="primary-button-not-hover" />
                </styleClass>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
             <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="ANNULER" textFill="WHITE">
                <font>
@@ -49,6 +53,9 @@
                   <String fx:value="secondary-button" />
                   <String fx:value="secondary-button-not-hover" />
                </styleClass>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
       </HBox>
