--- a/src/vue/modules/ModuleTitreSae.fxml
+++ b/src/vue/modules/ModuleTitreSae.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<HBox alignment="CENTER_LEFT" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxWidth="1000.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="R2.01 - Développement Orienté Objet">
+      <Label maxWidth="1000.0" text="Label" styleClass="label-blanc">
          <font>
             <Font name="Verdana Bold" size="24.0" />
          </font>
-      </Text>
+      </Label>
    </children>
 </HBox>
