FIN ITERATION 1 - resolution de petit bugs

--- a/src/vue/style.css
+++ b/src/vue/style.css
@@ -25,6 +25,10 @@
     -fx-background-color : #49424A;
 }
 
+.secondary-button-white-hover {
+    -fx-background-color : #C8C3C8;
+}
+
 .secondary-button-not-hover {
     -fx-background-color : transparent;
 }
