--- a/src/vue/style.css
+++ b/src/vue/style.css
@@ -134,3 +134,25 @@
 	-fx-border-color: #9555E8;
 	-fx-text-fill : #9555E8;
 }
+.text-area {
+    -fx-background-color: rgba(53,89,119,0.4);
+}
+
+.text-area .scroll-pane {
+    -fx-background-color: transparent;
+}
+
+.text-area .scroll-pane .viewport{
+    -fx-background-color: transparent;
+}
+
+
+.text-area .scroll-pane .content{
+    -fx-background-color: transparent;
+}
+.text-aide {
+	-fx-background-color : #E8E3E8;
+	-fx-font-family : verdana;
+	-fx-font-weight : bold;
+	-fx-font-size : 18px;
+}
