--- a/src/vue/VueHomepage.fxml
+++ b/src/vue/VueHomepage.fxml
@@ -76,7 +76,7 @@
                      </children>
                   </HBox>
                   <Line endX="38.0" rotate="90.0" stroke="WHITE" translateY="16.0" />
-                  <Button mnemonicParsing="false" onAction="#reinitialiserPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="REINITIALISER" textFill="#9555e8">
+                  <Button mnemonicParsing="false" onAction="#reinitialiserPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="RÉINITIALISER" textFill="#9555e8">
                      <font>
                         <Font name="Verdana Bold" size="12.0" />
                      </font>
