--- a/src/vue/VueHomepage.fxml
+++ b/src/vue/VueHomepage.fxml
@@ -35,7 +35,7 @@
                   <Line endX="38.0" rotate="90.0" stroke="WHITE" translateY="16.0" />
                   <HBox spacing="16.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#importerPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="IMPORTER" textFill="WHITE">
+                        <Button maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#importerPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="IMPORTER" textFill="WHITE">
                            <font>
                               <Font name="Verdana Bold" size="12.0" />
                            </font>
@@ -54,7 +54,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#exporterPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="EXPORTER" textFill="WHITE">
+                        <Button maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#exporterPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="EXPORTER" textFill="WHITE">
                            <font>
                               <Font name="Verdana Bold" size="12.0" />
                            </font>
@@ -78,7 +78,7 @@
                   <Line endX="38.0" rotate="90.0" stroke="WHITE" translateY="16.0" />
                   <HBox spacing="16.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#reinitialiserPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="REINITIALISER" textFill="#9555e8">
+                        <Button maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#reinitialiserPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="REINITIALISER" textFill="#9555e8">
                            <font>
                               <Font name="Verdana Bold" size="12.0" />
                            </font>
@@ -100,7 +100,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#aidePresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="BESOIN D'AIDE" textFill="#9555e8">
+                        <Button maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#aidePresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="BESOIN D'AIDE" textFill="#9555e8">
                            <font>
                               <Font name="Verdana Bold" size="12.0" />
                            </font>
