en cours d'aide

--- a/src/vue/modules/ModuleAideText.fxml
+++ b/src/vue/modules/ModuleAideText.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<HBox spacing="16.0" styleClass="grade-info-band" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+
+<VBox spacing="16.0" styleClass="grade-info-band" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
-   <children>
-      <Label styleClass="text-aide" text="Label" />
-   </children>
-</HBox>
+</VBox>
