--- a/src/vue/style.css
+++ b/src/vue/style.css
@@ -155,3 +155,9 @@
 	-fx-font-family : verdana;
 	-fx-font-size : 18px;
 }
+.titre-aide {
+	-fx-background-color : #E8E3E8;
+	-fx-font-family : verdana;
+	-fx-font-size : 24px;
+	-fx-font-weight : bold;
+}
