--- a/src/vue/VueHomepage.fxml
+++ b/src/vue/VueHomepage.fxml
@@ -78,7 +78,7 @@
                   <Line endX="38.0" rotate="90.0" stroke="WHITE" translateY="16.0" />
                   <HBox spacing="16.0">
                      <children>
-                        <Button maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#reinitialiserPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="REINITIALISER" textFill="#9555e8">
+                        <Button maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#reinitialiserPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="RÉINITIALISER" textFill="#9555e8">
                            <font>
                               <Font name="Verdana Bold" size="12.0" />
                            </font>
